--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="shortcut icon" href="favicon3-rus.png" type="png">
+    <link rel="shortcut icon" href="https://ru-stalin-ussr.ru/favicon3-rus.png" type="png">
 
     <meta name="description"
         content="Здесь я предоставляю тебе попросить меня сделать тебе реферат, таблицу и прочее. Для связи со мной вот мой аккаунт в Telegram @agent_kgb_228" />
