--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 <body>
     <header>
         <a href="/"> AGENT-KGB-228</a>
-        <div>
+      
             <a href="/prajs-list-na-uslugi/">Прайс-лист на услуги</a>
-        </div>
+ 
     </header>
     <main>
 
         <div class="container">
 
-            <h1>Добро пожаловать в каморку agent-kgb-228</h1>
+            <h1>Услуги agent-kgb-228</h1>
             <p> Здесь я предоставляю тебе попросить меня сделать тебе реферат, таблицу и прочее. Для связи со мной вот
                 мой аккаунт в Telegram @agent_kgb_228. Оплата услуг производится только онлайн.</p>
 
