--- a/pay/qiwi-sbp/index.html
+++ b/pay/qiwi-sbp/index.html
@@ -75,11 +75,8 @@
 
     <header>
         <a href="/"> AGENT-KGB-228</a>
-        <div>
-            <a href="/pay/">Правила</a>
-            <a href="/pay/tarifs/">Тарифы</a>
-
-        </div>
+      
+        <a href="/prajs-list-na-uslugi/">Прайс-лист на услуги</a>
     </header>
 
     <main>
