--- a/prajs-list-na-uslugi/index.html
+++ b/prajs-list-na-uslugi/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги agent-kgb-228</title>
+    <title>Прайс-лист на услуги</title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -48,9 +48,8 @@
 <body>
     <header>
         <a href="/"> AGENT-KGB-228</a>
-        <div>
-            <a href="/prajs-list-na-uslugi/">Прайс-лист на услуги</a>
-        </div>
+      
+        <a href="/prajs-list-na-uslugi/">Прайс-лист на услуги</a>
     </header>
     <main>
 
