--- a/pay/qiwi-sbp/index.html
+++ b/pay/qiwi-sbp/index.html
@@ -122,10 +122,8 @@
             <div class="re">
 
                 <a href="/privacy/">Пользовательское Соглашение</a>
-                <a href="https://games.ru-stalin-ussr.ru">Игры</a>
-
-                <a href="/pay/">Тарифы для создание докладов</a>
-                <a href="https://t.me/agent_kgb_228">Обратная свзяь</a>
+                <a href="https://ru-stalin-ussr.ru">Главный Сайт</a>
+                <a href="https://t.me/agent_kgb_228" target="_blank">Обратная свзяь</a>
             </div>
             <hr>
 
