--- a/pay/sberbank-sbp/index.html
+++ b/pay/sberbank-sbp/index.html
@@ -111,12 +111,10 @@ main img{
             <a href="https://t.me/agent_kgb_229" target="_blank"><img src="https://old.ru-stalin-ussr.ru/icons8-телеграмма-app.svg" alt="" class="iconka"></a> 
             <hr>
             <div class="re">
-            
+
                 <a href="/privacy/">Пользовательское Соглашение</a>
-                <a href="https://games.ru-stalin-ussr.ru">Игры</a>
-            
-                <a href="/pay/">Тарифы для создание докладов</a>
-                <a href="https://t.me/agent_kgb_228">Обратная свзяь</a>
+                <a href="https://ru-stalin-ussr.ru">Главный Сайт</a>
+                <a href="https://t.me/agent_kgb_228" target="_blank">Обратная свзяь</a>
             </div>
             <hr>
 
