--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <div class="re">
 
                 <a href="/privacy/">Пользовательское Соглашение</a>
-                <a href="https://games.ru-stalin-ussr.ru">Игры</a>
-                <a href="/pay/">Тарифы для создание докладов</a>
+                <a href="https://ru-stalin-ussr.ru">Главный Сайт</a>
                 <a href="https://t.me/agent_kgb_228" target="_blank">Обратная свзяь</a>
             </div>
             <hr>
