--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
                 <h2 id="Способы оплаты">Способы оплаты</h2>
                 <hr>
                 <ol>
-                    <li>На кошелек ЮМани<sup>1</sup>: <b><a href="https://yoomoney.ru/to/4100116774485382"
+                    <li>На кошелек ЮМани<sup>1</sup>: <b><a href="//yoomoney.ru/to/4100116774485382"
                                 style="margin: 0%; padding: 0%;  text-decoration: none;">4100116774485382</a></b> </li>
                     <li>Через СБП<sup>2,3,4,5</sup> по номеру: +7-(905)-457-53-08. Банк получателя автоматически ЮМани, банк
                         получателя
-                        <b>НЕ МЕНЯТЬ!!!</b>. Подробнее <a target="_blank" href="https://yoomoney.ru/page?id=536036"
+                        <b>НЕ МЕНЯТЬ!!!</b>. Подробнее <a target="_blank" href="//yoomoney.ru/page?id=536036"
                             style="margin: 0%; padding: 0%; text-decoration: none;">на
                             сайте ЮМани</a>.
                     </li>
+                    <li>На QIWI <a href="//qiwi.com/p/79054575308">+79054575308</a></li>
+                    <li>На QIWI через <a href="https://my.qiwi.com/Zakhar-PCZbaFbQT1">форму</a></li>
+    
                 </ol>
                 <br>
                 <div style="text-align: left; font-size: 1.4ch;">
@@ -81,7 +84,7 @@
                         </li>
                         <li>Комиссия 0%.</li>
                         <li>Если у вас сбер и вы не знаете как подключиться к СБП вся информация на <a target="_blank"
-                                href="https://www.sberbank.ru/ru/person/remittance/sbp"
+                                href="//www.sberbank.ru/ru/person/remittance/sbp"
                                 style="margin: 0%; padding: 0%; color: #21BA72;">
                                 сайте СберБанка</a>. </li>
                         <li>Если у вас сбер и вы не знаете как перевести через СБП вся информация как перевести <a 
@@ -109,7 +112,7 @@
             <hr>
             <div class="re">
 
-                <a href="/privacy/">Пользовательское Соглашение</a>
+                <a href="//ru-stalin-ussr.ru/privacy/">Пользовательское Соглашение</a>
                 <a href="https://ru-stalin-ussr.ru">Главный Сайт</a>
                 <a href="https://t.me/agent_kgb_228" target="_blank">Обратная свзяь</a>
             </div>
