--- a/prajs-list-na-uslugi/index.html
+++ b/prajs-list-na-uslugi/index.html
@@ -57,16 +57,16 @@
 
             <h1>Прайс-лист на услуги</h1>
 <p>Данный прайс-лист действует до конца 2022 года</p>
-            <h4>Распечатка готового доклада</h4>
+            <h4>Распечатка документа</h4>
 
             <dl>
-                <li>тоимость печатания листа ч/б: 5 руб/лист, стоимость второго и далее листа на 20% дешевле;</li>
-                <li>тоимость печатания листа цв: 10 руб/лист, стоимость второго и далее листа на 20% дешевле;</li>
-                <li> фото - 5 руб;</li>
-                <li> таблица - 5 руб, если не более 10х10;</li>
-                <li>оставка - 2 руб;</li>
+                <li>Печать ч/б листа с одной стороны: 5 руб;</li>
+                <li>Печать ч/б листа с обеих сторон: 8 руб;</li>
+                <li>Печать цв листа с одной стороне: 10 руб;</li>
+                <li>Печать цв листа с обеих сторон: 15 руб;;</li>
+                <li>Доставка - 0 руб, если цена более 100 руб, иначе 10 рублей;</li>
             </dl>
-            <h4>Создание доклада для отправки онлайн</h4>
+            <h4>Создание доклада</h4>
             <dl>
                 <li>Оформление - 15 руб;</li>
                 <li>100 слов - 10 руб;</li>
@@ -86,11 +86,6 @@
                 <li>1 фотография - 5 руб;</li>
                 <li>Оформление - 15 руб;</li>
                 <li>Поиск информации для презентации - 15 руб;</li>
-            </dl>
-            <h4>Домашние задания и лаб/р</h4>
-            <dl>
-                <li>Все домашние задания - 20 руб;</li>
-                <li>Лабораторные работы - 20 руб;</li>
             </dl>
         </div>
         <br>
